UndoRedo system works in theory